set z-index to -1 in hero image, prevent testimonial image from stretching

--- a/scss/components/_hero.scss
+++ b/scss/components/_hero.scss
@@ -94,6 +94,7 @@
     display: flex;
     justify-content: flex-end;
     pointer-events: none;
+    z-index: -1;
 
     @include mq(md) {
       display: none;
@@ -165,6 +166,10 @@
   &__testimonial {
     display: flex;
     column-gap: 24px;
+
+    img {
+      align-self: flex-end;
+    }
   }
 
   &__name {
